
CPE:
- Adding 'CPE__USE_[VC|GCC]_WORKAROUND'.

CTN:
- Adding 'reset()' method to the item-related objects.
- Renaming to 'Sync' where needed.
- Adding GCC workaround.
- Adding VC++ workaround.
- Adapting to the new 'AUTO(x)' macros.

DTR:
- Adapting to changes in 'que'.
- Adapting to the new 'AUTO(x)' macros.

EPSMSC:
- Removing IDEALX-related text.
- Adding Epeios text.

FLM:
- Using now the UNIX system calls under UNIX instead of the C/C++ call (which seems bugged).
- Using low-level io functions under Windows instead of the C/C++ call.
- Adding a static part for standardization.

FLW:
- Fixing bug which fills the cache even if there is asked for more then the cache can contain.
- Adding length feature.
- 'data__' type renamed in 'datum__'.
- Adding 'Skip()' method.

FLX:
- Adapting to vhanges in 'FLW'.

IDXBTR:
- Adding 'MarkAs...()' method.
- Adapting to new 'AUTO(x)' macros.

IDXBTQ:
- Adding 'E_IBTREEt()'.
- Adding 'MarkAs...()' method.
- Adding 'E_INDEX(_)'.
- Adapting to new 'AUTO(x)' macros.

IDXQUE:
- Fixing bugs concerning row type.
- Adding 'MarkAs...()' method.
- Adapting to new 'AUTO(x)' macros.

LST:
- Adapting to the new 'AUTO(x)' macros.

MDR:
- Adding some features for portable data types.
- Removing 'basic_' prefix.

MMG:
- Adapting to new 'AUTO(x)' macros.

QUE:
- Fixing bug from typed queue.
- Fixing amount/size handling bug.
- Replacing 'Insert...()' methods by 'Become...()' methods.

MMG:
- Fixing autonome declaration bug.
- Adaptation to changes in underlying libraries.
- Coding of operators '->' and '*' to replace operator '()'.

MMM:
- Adding 'E_MULTIMEMORY(_)' #define.

QUE:
- Adapting to the new 'AUTO(x)' macros.

SALCSM:
- Adapting to changes in 'FLW'.

SCK:
- Adapting to changes in 'FLW'.

SSNMNG:
- Adapting to modification made in 'IDXBTQ' library.

STF:
- Adapting to vhanges in 'FLW'.

STK:
- Adapting to the new 'AUTO(x)' macros.

STR:
- Adding missing 'const' qualifier.
- Adding 'ToLF()' method.

TOL: